# OpenMask

./: AndroidManifest.xml  README.md  build.gradle.kts  build.py  requirements.txt
.github/workflows/: build.yml
assets/: theme_color.json
builder/: apk_builder.py  build_config.py  env_check.py  res_compile.py
core/src/main/cpp/: CMakeLists.txt  DeviceSpoof.c  build.gradle.kts  cache_clean.c  kern_auth.c  kprobe_inject.c  log_ctrl.c  mount_engine.c  om-su.c  om_sud.c  selinux_ctrl.c  virt_isolate.c
core/src/main/cpp/app/: install.sh  module.prop  toggle_root.sh
core/src/main/cpp/app/post-fs-data.d/: post-fs-data.sh
core/src/main/cpp/app/scripts/: install.sh
core/src/main/cpp/scripts/: auto_ota_block.sh  boot_fix.sh  boot_patch.sh  boot_repair.sh  cron_cache.sh  ota_block.sh
res/values/: strings.xml
scripts/: clean.sh  customize.sh  module.prop
src/main/kotlin/com/openmask/: Main.kt
